fix: scroll issues on safari fix: only use yarn fix: Make admin chat first

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+@supports (-webkit-touch-callout: none) {
+  .max-h-screen {
+    max-height: 100svh;
+  }
+  .min-h-screen {
+    min-height: 100svh;
+  }
+}
+
 .light{
   --grey-bg:#F3F5FF;
 }
